feat: bind /tmp/mariadb between host and container

--- a/compose.yml
+++ b/compose.yml
@@ -54,6 +54,8 @@ services:
       - MYSQL_DATABASE=wordpress
     networks:
       - tarea3
+    volumes:
+      - /tmp/mariadb:/tmp/mariadb
 
 networks:
   tarea3:
