--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,7 +3,7 @@ server {
     server_name moodle.tarea3;
 
     location / {
-        proxy_pass http://host.docker.internal:8080;
+        proxy_pass http://moodle:8080;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -16,7 +16,7 @@ server {
     server_name wordpress.tarea3;
 
     location / {
-        proxy_pass http://host.docker.internal:8081;
+        proxy_pass http://wordpress:80;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -29,7 +29,7 @@ server {
     server_name svgl.tarea3;
 
     location / {
-        proxy_pass http://host.docker.internal:8082;
+        proxy_pass http://word-mastermind:80;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
